[package]
authors = ["yihau.chen <a122092487@gmail.com>"]
edition = "2018"
name = "qf"
version = "0.1.0"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
maplit = "1.0.2"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
solana-program = "1.6.4"
spl-math = {version = "0.1.0", features = ["no-entrypoint"]}
spl-token = {version = "3.1", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.2", features = ["no-entrypoint"]}
thiserror = "1.0"

[dev-dependencies]
solana-sdk = "1.6.4"

[lib]
crate-type = ["cdylib", "lib"]
